[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/consola.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://frames/ending_summary.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="bg" type="ColorRect" parent="."]
margin_left = -12.0
margin_top = -11.0
margin_right = 1044.0
margin_bottom = 613.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ending_name" type="Label" parent="bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -400.0
margin_top = 37.0
margin_right = 400.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
text = "Нейтральная концовка"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ending_desc" type="Label" parent="bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -501.0
margin_top = 124.0
margin_right = 501.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 2 )
text = "Вы пережили пять ночей с Максом и спите спокойно.
Но много чего осталось в тени..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ending_pros" type="Label" parent="bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -501.0
margin_top = 196.0
margin_bottom = 564.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.109804, 1 )
text = "+ Вам ничто не угрожает более.
+ Вы поняли, почему на вас напа
дали коты"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ending_cons" type="Label" parent="bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 196.0
margin_right = 501.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "- Вы не поняли, почему на 
вас нападали учителя.
- Вы не поняли, кто такой гопарь
- Вы не поняли, почему на вас 
охотится Служба Безопасности Укра
ины"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ending_whattodo" type="Label" parent="bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -501.0
margin_top = 468.0
margin_right = 500.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.788235, 1, 1 )
text = "Егорыч попросил вас забрать у него коробку, в которую надо ввести определенную комбинацию. Скажем так, коробка уже у вас..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="bg"]
margin_left = 724.944
margin_top = 553.577
margin_right = 1028.94
margin_bottom = 604.577
custom_fonts/font = SubResource( 3 )
text = "Дальше"
